Fixed: the sim crashes when you empty out the entire solution
Added a button that removes solutes from the sim
# 0.00.02 (51613) May 6, 2011
Made background black and crystals white
made it so each grain of sugar and salt as 1E-6 moles (no randomness)
# 0.00.01 (51610) May 6, 2011
Added initial version of the bar chart
added concentration values to the model
Added sugar crystals
Added a beaker
added a shaker image
initialized application