@@ -4,7 +4,6 @@ package edu.colorado.phet.sugarandsaltsolutions.common.model;
 import java.util.ArrayList;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
-import edu.colorado.phet.common.phetcommon.math.MathUtil;
 import edu.colorado.phet.common.phetcommon.model.clock.ClockAdapter;
 import edu.colorado.phet.common.phetcommon.model.clock.ClockEvent;
 import edu.colorado.phet.common.phetcommon.model.clock.ConstantDtClock;
@@ -70,19 +69,38 @@ public class SugarAndSaltSolutionModel {
     //Update the model when the clock ticks
     private void updateModel( double dt ) {
         //Change the water volume based on input and output flow
-        double newVolume = water.volume.get() + dt * ( inputFlowRate.get() - outputFlowRate.get() ) * FLOW_SCALE;
+        double inVolume = dt * inputFlowRate.get() * FLOW_SCALE;
+        double outVolume = dt * outputFlowRate.get() * FLOW_SCALE;
+
+        //Compute the new water volume, but making sure it doesn't overflow or underflow
+        double newVolume = water.volume.get() + inVolume - outVolume;
+        if ( newVolume > beaker.getMaxFluidVolume() ) {
+            inVolume = beaker.getMaxFluidVolume() + outVolume - water.volume.get();
+        }
+        else if ( newVolume < 0 ) {
+            outVolume = inVolume + water.volume.get();
+        }
+
+        //Set the true value of the new volume based on clamped inputs and outputs
+        newVolume = water.volume.get() + inVolume - outVolume;
 
         //Turn off the input flow if the beaker would overflow
         if ( newVolume >= beaker.getMaxFluidVolume() ) {
             inputFlowRate.set( 0.0 );
+            //TODO: make the cursor drop the slider?
         }
 
         //Update the water volume
-        water.volume.set( MathUtil.clamp( 0, newVolume, beaker.getMaxFluidVolume() ) );
+        water.volume.set( newVolume );
+        waterExited( outVolume );
 
         //Move about the sugar and salt crystals
         updateCrystals( dt, saltList );
         updateCrystals( dt, sugarList );
+    }
+
+    //Called when water (with dissolved solutes) flows out of the beaker, so that subclasses can update concentrations if necessary.
+    protected void waterExited( double outVolume ) {
     }
 
     //Propagate the sugar and salt crystals, and absorb them if they hit the water
